--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body id="gradient">
+<nav>
+    <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="index1.html">Game</a></li>
+        <li><a href="#contact">Contact</a></li>
+        <li><a href="#about">About</a></li>
+    </ul>
+</nav>
 <h1>Background Generator</h1>
 <input class="color1" type="color" name="color1" value="00ff00">
 <input class="color2" type="color" name="color2" value="ff0000">
